--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -10,65 +10,42 @@
 
       <div class="col-sm-8 col-sm-offset-2 pt80 pb80" data-sr="wait .2s">
         <div class="row">
-          <form
-            class="contact-form form-black"
-            id="contact-form"
-            action="send_email.php"
-            method="post"
-            data-all-fields-required-msg="All fields are required"
-            data-ajax-fail-msg="Ajax could not set the request"
-            data-success-msg="Email successfully sent.">
-            <div class="col-sm-12 mb30">
-              <div class="form-control">
 
-                <input
-                  class="contact-form-name"
-                  type="text"
-                  name="name"
-                  placeholder="Your name:">
-                <div class="line-input"></div>
+          <%= form_tag(subscribe_users_path,class: 'contact-form form-black') do  %>
 
+            <div class="form-control">
+              <%= text_field_tag :first_name, nil, class: 'contact-form-name', placeholder: 'First Name...', required: true %>
+              <div class="line-input"></div>
+            </div>
+            <div class="spacer-half"></div>
+            <div class="form-control">
+              <%= text_field_tag :last_name, nil, class: 'contact-form-message', placeholder: 'Last Name...', required: true %>
+              <div class="line-input"></div>
+            </div>
+            <div class="spacer-half"></div>
+            <div class="form-control">
+              <%= email_field_tag :email, nil, class: 'contact-form-email', placeholder: 'Email...', required: true %>
+              <div class="line-input"></div>
+              <div class="ui left corner label">
+                <i class="asterisk icon"></i>
               </div>
             </div>
-            <!-- End col-sm-12 -->
-            <div class="col-sm-12 mb30">
-              <div class="form-control">
 
-                <input
-                  class="contact-form-email"
-                  type="text"
-                  name="email"
-                  placeholder="Your email:">
-                <div class="line-input"></div>
-
-              </div>
-            </div>
-            <!-- End col-sm-12 -->
-            <div class="col-sm-12 mb50">
-              <div class="form-control">
-
-                <textarea class="contact-form-message" name="message" placeholder="Message:"></textarea>
-                <div class="line-input"></div>
-
-              </div>
-            </div>
-            <!-- End col-sm-12 -->
+            <!-- End  -->
             <div class="col-sm-12">
               <div class="text-center">
-
-                <button class="btn">
-                  <span>Submit<i class="fa fa-spin fa-spinner ajax-loader" style="display: none;"></i>
-                  </span>
-                </button>
-
+                <p class="return-msg">&nbsp;</p>
               </div>
+
             </div>
-            <!-- End col-sm-12 -->
-            <div class="col-sm-12">
-              <p class="return-msg">&nbsp;</p>
-            </div>
-            <!-- End col-sm-12 -->
-          </form>
+
+          <% end %>
+
+          <div class="spacer-half"></div>
+          <button class="btn" id="subscribe-user" data-url="<%= subscribe_users_path %>">
+          <i class="mail icon"></i>
+            <span>Subscribe</span>
+          </button>
           <!-- End contact-form -->
         </div>
       </div>
