--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,10 @@
       <!--   PAGE BORDER            -->
       <!-- ************************ -->
 
-      <span class="frame-line animated top-frame"></span>
+<!--       <span class="frame-line animated top-frame"></span>
       <span class="frame-line animated right-frame"></span>
       <span class="frame-line animated bottom-frame"></span>
-      <span class="frame-line animated left-frame"></span>
+      <span class="frame-line animated left-frame"></span> -->
 
       <%= render partial: 'navbar' %>
       <%= yield %>
