--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -8,7 +8,7 @@
     <div class="crazy-border"></div>
 
     <div class="crazy-logo">
-      <img src="assets/images/bushido_logo.png" alt="crazy-logo">
+      <img src="assets/images/bushilogo.png" alt="crazy-logo">
     </div>
     <!-- End crazy-logo -->
 
