--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -1,14 +1,14 @@
-<div class="title-home jarallax" style="background-image: url(assets/images/wallpaper-dev.jpg);">
+<div class="title-home jarallax" style="background-image: url(assets/images/team2.jpg);">
 
   <div class="overlay"></div>
   <!-- End overlay -->
 
   <div class="container">
 
-    <div class="text-left">
-      <h1 data-sr>We are
+    <div class="text-center">
+      <h4 data-sr style="" class='we-are'>We are
         <span class="color typed-two">&nbsp;</span>
-      </h1>
+      </h4>
       <em data-sr>Donec et purus iaculis, posuere ipsum sed, lobortis quam. Suspendisse potenti.
         <br>
         Vestibulum accumsan sem sit amet leo finibus rutrum. Nulla sit amet
