--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -21,7 +21,21 @@
 
       </div>
     </div>
-
+    <div class="row">
+      <div><p class="title-over-images"> Trusted by leading brands </p> </div>
+      <div class="col-md-3">
+        <img alt="Airbnb" src="https://bs-uploads.toptal.io/blackfish-uploads/projects_page/content/client/logo_file/logo/1860/client_1_logo-b668aedc00b0a5303fd5e7511e087367.png">
+      </div>
+      <div class="col-md-3">
+        <img alt="HP" src="https://bs-uploads.toptal.io/blackfish-uploads/projects_page/content/client/logo_file/logo/1861/hpe-2-32e980cb9e3fdf1e5e72bc3794d91dc5.svg">
+      </div>
+      <div class="col-md-3">
+        <img alt="Shopify" src="https://bs-uploads.toptal.io/blackfish-uploads/projects_page/content/client/logo_file/logo/1862/client_4_logo-991b5313f351d0c08ce21b490869c2ac.png">
+      </div>
+      <div class="col-md-3">
+        <img alt="Zendesk" src="https://bs-uploads.toptal.io/blackfish-uploads/projects_page/content/client/logo_file/logo/1863/client_5_logo-c8def699bdc2bb0e707496044f58a9a3.png">
+      </div>
+    </div>
   </div>
   <!-- End container -->
 
@@ -33,55 +47,50 @@
   <!--   SECTION FEATURES       -->
   <!-- ************************ -->
 
-  <section class="features pt100 pb100">
+  <section class="features pt100">
 
     <div class="container">
-      <div class="row">
+      <div class="title">A Managed Team, Leveraging Best Practices </div>
+        <div >
+          <div class="col-md-12 agile-diagram-text pt50 pb50" style="font-size: larger;">
+            <div class="row">
+              <div  class="col-md-4">
+                <h4 class="sub_title"> Research & Planning
+                  <div class="crazy-borderv2"></div>
+                </h4>
+              Sed ut perspiciatis unde omnis iste natus error sit 
+              voluptatem accusantium doloremque laudantium, totam
+              rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi archite
 
-        <div class="feature-item sm-mb40" data-sr>
-          <div class="col-md-3 col-sm-6">
-            <div class="item-head">
-              <i class="cr-diamond"></i>
+              </div>
+              <div class="col-md-4">
+                <h4 class="sub_title"> Agile Development
+                  <div class="crazy-borderv2"></div>
+                 </h4>
+              Sed ut perspiciatis unde omnis iste natus error sit
+              voluptatem accusantium doloremque laudantium, totam
+              rem aperiam, eaque ipsa quae ab illo inventore veritatis
+              et quasi archite 
             </div>
-            <h6>creative design</h6>
-            <p>Pellentesque diam, vulputate vitae mollis a, mollis id nisi</p>
+              <!-- </div > -->
+              <div class="col-md-4">
+                <h4 class="sub_title"> Product Lunch
+                  <div class="crazy-borderv2"></div>
+                </h4>
+                Sed ut perspiciatis unde omnis iste natus error sit
+                voluptatem accusantium doloremque laudantium, totam
+                rem aperiam, eaque ipsa quae ab illo inventore veritatis
+                et quasi archite
+                 
+              </div>
+            </div>
           </div>
         </div>
-        <!-- End features-item -->
-        <div class="feature-item sm-mb40" data-sr>
-          <div class="col-md-3 col-sm-6">
-
-            <div class="item-head">
-              <i class="cr-magnifier"></i>
-            </div>
-            <h6>well organized</h6>
-            <p>Aliquam accumsan sapien diam dignissim scelerisque</p>
+        <div>
+          <div class="col-md-12 second-sec-title">
+            <img src="assets/images/bushidiagram.png" >
           </div>
         </div>
-        <!-- End features-item -->
-
-        <div class="feature-item sm-mb40" data-sr>
-          <div class="col-md-3 col-sm-6">
-            <div class="item-head">
-              <i class="cr-gear"></i>
-            </div>
-            <h6>easy to customize</h6>
-            <p>Cum sociis natoque penatibus magnis dis parturient</p>
-          </div>
-        </div>
-        <!-- End features-item -->
-
-        <div class="feature-item sm-mb40" data-sr>
-          <div class="col-md-3 col-sm-6">
-            <div class="item-head">
-              <i class="cr-star"></i>
-            </div>
-            <h6>support 24/7</h6>
-            <p>Maecenas vitae mollis porttitor metus in lobortis justo</p>
-          </div>
-        </div>
-        <!-- End features-item -->
-      </div>
     </div>
     <!-- End container -->
 
@@ -91,71 +100,26 @@
   <!--   SECTION ABOUT          -->
   <!-- ************************ -->
 
-  <section class="pt50">
 
-    <div class="container">
-      <div class="row">
-
-        <div class="info-block-wrap clearfix">
-
-          <div
-            class="image-block col-md-7"
-            style="background-image: url(assets/images/index_three_about.png);"></div>
-          <!-- End image-block -->
-          <div class="col-md-7">
-            <div class="info-block sm-mb30">
-              <h3>who we are</h3>
-              <p>
-                Pellentesque vitae feugiat nisi, et haretra eros. Cras vehicula dignissim augue
-                vitae efficitur. Aliquam erat volutpat. Nulla facilisi. onec ut felis eget
-                turpis tempus mattis. Proin aliquet nec erat at laoreet. Ut justo ligula,
-                finibus hendrerit sapien et, gravida aliquam urna. Pellentesque habitant morbi
-                tristique senectus et netus et malesuada fames ac turpis egestas. Fusce quis
-                felis nec dolor interdum lacinia.
-              </p>
-            </div>
-            <!-- End info-block -->
-
-          </div>
-
-        </div>
-        <!-- End info-block-wrap -->
-      </div>
-
-    </div>
-    <!-- End container -->
-
-    <div class="container">
-
-      <div class="love-block">
-        <h2 data-sr>idea + design + development =
-          <i class="fa fa-fw fa-heart-o"></i>
-        </h2>
-      </div>
-      <!-- End love-block -->
-
-    </div>
-    <!-- End container -->
-  </section>
 
   <!-- ************************ -->
   <!--   SEPARATOR              -->
   <!-- ************************ -->
 
   <div class="container">
-    <div class="sep-line"></div>
+    <div class="sep-line-bushi"></div>
   </div>
   <!-- End container -->
 
   <!-- ************************ -->
   <!--   SECTION SERVICES       -->
   <!-- ************************ -->
-
-  <section class="pt150 pb150">
+<div class="craxz-line"></div>
+  <section class="pt100 pb150">
     <div class="container">
 
       <div class="section-title">
-        <h2 data-sr>what we do</h2>
+        <div class="title">What We Do</div>
 
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
@@ -178,7 +142,9 @@
               <img src="assets/images/portfolio-style-one/single5.jpg" alt="image">
             </div>
             <div class="col-md-6 col-md-offset-1">
-              <h2 class="uppercase">01. graphic design</h2>
+              <h4 class="sub_title">01. Graphic Design
+                 <div class="crazy-borderv2"></div>
+              </h4>
 
               <p>Vestibulum eu ante eget metus consequat tincidunt id a metus. Curabitur
                 bibendum quam porta, pharetra diam quis, porta lacus. Sed augue ex, tempor vitae
@@ -205,7 +171,9 @@
               <img src="assets/images/portfolio-style-one/single6.jpg" alt="image">
             </div>
             <div class="col-md-6 col-md-offset-1">
-              <h2 class="uppercase">02. web design</h2>
+              <h4 class="sub_title">02. Web Design
+                 <div class="crazy-borderv2"></div>
+              </h4>
 
               <p>Vestibulum eu ante eget metus consequat tincidunt id a metus. Curabitur
                 bibendum quam porta, pharetra diam quis, porta lacus. Sed augue ex, tempor vitae
@@ -232,7 +200,9 @@
               <img src="assets/images/portfolio-style-one/single7.jpg" alt="image">
             </div>
             <div class="col-md-6 col-md-offset-1">
-              <h2 class="uppercase">03. branding</h2>
+              <h4 class="sub_title">03. Branding
+                 <div class="crazy-borderv2"></div>
+              </h4>
 
               <p>Vestibulum eu ante eget metus consequat tincidunt id a metus. Curabitur
                 bibendum quam porta, pharetra diam quis, porta lacus. Sed augue ex, tempor vitae
@@ -340,7 +310,7 @@
     <div class="container">
 
       <div class="section-title">
-        <h2 data-sr>our works</h2>
+        <div class="title">Our Works</div>
       </div>
     </div>
     <!-- End container -->
