--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -47,7 +47,7 @@
   <!--   SECTION FEATURES       -->
   <!-- ************************ -->
 
-  <section class="features pt100">
+  <section class="features pt150">
 
     <div class="container">
       <div class="title">A Managed Team, Leveraging Best Practices </div>
@@ -307,127 +307,238 @@
   <!-- ************************ -->
 
   <section class="pt150 pb150">
+
     <div class="container">
 
-      <div class="section-title">
-        <div class="title">Our Works</div>
+      <div class="section-title-sm">
+        <h4 class="title">meet our team</h2>
+
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <em >Suspendisse et tristique nisi, a rutrum lacus. Sed
+              dapibus nec massa et rutrum hendrerit tincidunt feugiat non metus quis lectus
+              feugiat bibendum.</em>
+          </div>
+        </div>
+
       </div>
     </div>
     <!-- End container -->
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-12">
-          <div class="filters-wrap pt5">
+        <div class="col-sm-4">
 
-            <div class="text-center">
-              <ul class="list-none filters">
-                <li class="active-filter" data-filter="*">
-                  <span>all</span>
-                </li>
-                <li data-filter=".f_web_design">
-                  <span>web design</span>
-                </li>
-                <li data-filter=".f_development">
-                  <span>development</span>
-                </li>
-                <li data-filter=".f_graphic_design">
-                  <span>graphic design</span>
-                </li>
-                <li data-filter=".f_branding">
-                  <span>branding</span>
-                </li>
-                <li data-filter=".f_photography">
-                  <span>photography</span>
-                </li>
-              </ul>
-              <!-- End filters -->
-
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <img src="assets/images/team_001.png" alt="image">
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
             </div>
-
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Col Sass / Web developer</h6>
+              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+            </div>
+            <!-- End team-footer -->
           </div>
-          <!-- End filters-wrap -->
+          <!-- End team-item -->
         </div>
-      </div>
-    </div>
-    <!-- End container -->
 
-    <div class="container">
-      <div class="row">
-        <div class="crazy-portfolio-masonry-wrapper" data-col="3">
-          <div class="crazy-portfolio-list">
+        <div class="col-sm-4">
 
-            <div class="crazy-portfolio-item f_web_design f_photography">
-              <a href="/work" class="animsition-link">
-                <div
-                  class="image-wrap"
-                  style="background-image: url(assets/images/portfolio-style-three/1.jpg);"></div>
-                <div class="overlay-color"></div>
-              </a>
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <img src="assets/images/team_002.png" alt="image">
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
             </div>
-            <!-- End crazy-portfolio-item -->
-
-            <div class="crazy-portfolio-item f_branding">
-              <a href="/work" class="animsition-link">
-                <div
-                  class="image-wrap"
-                  style="background-image: url(assets/images/portfolio-style-three/2.jpg);"></div>
-                <div class="overlay-color"></div>
-              </a>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Ruby Rails / web designer</h6>
+              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
             </div>
-            <!-- End crazy-portfolio-item -->
-
-            <div class="crazy-portfolio-item f_web_design">
-              <a href="/work" class="animsition-link">
-                <div
-                  class="image-wrap"
-                  style="background-image: url(assets/images/portfolio-style-three/3.jpg);"></div>
-                <div class="overlay-color"></div>
-              </a>
-            </div>
-            <!-- End crazy-portfolio-item -->
-
-            <div class="crazy-portfolio-item f_development">
-              <a href="/work" class="animsition-link">
-                <div
-                  class="image-wrap"
-                  style="background-image: url(assets/images/portfolio-style-three/4.jpg);"></div>
-                <div class="overlay-color"></div>
-              </a>
-            </div>
-            <!-- End crazy-portfolio-item -->
-
-            <div class="crazy-portfolio-item f_graphic_design">
-              <a href="/work" class="animsition-link">
-                <div
-                  class="image-wrap"
-                  style="background-image: url(assets/images/portfolio-style-three/5.jpg);"></div>
-                <div class="overlay-color"></div>
-              </a>
-            </div>
-            <!-- End crazy-portfolio-item -->
-
-            <div class="crazy-portfolio-item f_branding">
-              <a href="/work" class="animsition-link">
-                <div
-                  class="image-wrap"
-                  style="background-image: url(assets/images/portfolio-style-three/6.jpg);"></div>
-                <div class="overlay-color"></div>
-              </a>
-            </div>
-            <!-- End crazy-portfolio-item -->
-
+            <!-- End team-footer -->
           </div>
-          <!-- End crazy-portfolio-list -->
+          <!-- End team-item -->
         </div>
-        <!-- ENd crazy-portfolio-masonry-wrapper -->
+                <div class="col-sm-4">
 
-        <div class="mt80 text-center">
-          <a href="/our_work" class="btn animsition-link line-vert" data-sr>
-            <span>see all works</span>
-          </a>
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <img src="assets/images/team_002.png" alt="image">
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
+            </div>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Ruby Rails / web designer</h6>
+              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+            </div>
+            <!-- End team-footer -->
+          </div>
+          <!-- End team-item -->
+        </div>
+                <div class="col-sm-4">
+
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <img src="assets/images/team_002.png" alt="image">
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
+            </div>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Ruby Rails / web designer</h6>
+              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+            </div>
+            <!-- End team-footer -->
+          </div>
+          <!-- End team-item -->
+        </div>
+                <div class="col-sm-4">
+
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <img src="assets/images/team_002.png" alt="image">
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
+            </div>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Ruby Rails / web designer</h6>
+              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+            </div>
+            <!-- End team-footer -->
+          </div>
+          <!-- End team-item -->
         </div>
 
+        <div class="col-sm-4">
+
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <img src="assets/images/team_003.png" alt="image">
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
+            </div>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Mark React / team lead</h6>
+              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+            </div>
+            <!-- End team-footer -->
+          </div>
+          <!-- End team-item -->
+        </div>
       </div>
     </div>
     <!-- End container -->
