new diagram added

--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -1,4 +1,4 @@
-<div class="title-home jarallax" style="background-image: url(assets/images/team2.jpg);">
+<div class="title-home jarallax" style="background-image: url(assets/images/land.jpg);">
 
   <div class="overlay"></div>
   <!-- End overlay -->
@@ -50,45 +50,37 @@
   <section class="features pt150">
 
     <div class="container">
-      <div class="title">A Managed Team, Leveraging Best Practices </div>
-        <div >
-          <div class="col-md-12 agile-diagram-text pt50 pb50" style="font-size: larger;">
-            <div class="row">
-              <div  class="col-md-4">
+      <div class="title">
+        The Intellectual and Technological Powerhouse Creating Tomorrow.
+      </div>
+        <div class="row">
+          <div class="col-md-6 agile-diagram-text pt50 pb50" style="font-size: larger;">
+            <img src="assets/images/diagram_bushi.png" >
+          </div>
+          <div class="col-md-6" >
+            <div  class="">
                 <h4 class="sub_title"> Research & Planning
                   <div class="crazy-borderv2"></div>
                 </h4>
-              Sed ut perspiciatis unde omnis iste natus error sit 
-              voluptatem accusantium doloremque laudantium, totam
-              rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi archite
+                We apply the rigor of the scientific method to the nascent space of cryptocurrency and blockchain, developing the infrastructure of the Web 3.0
 
               </div>
-              <div class="col-md-4">
+              <div class="">
                 <h4 class="sub_title"> Agile Development
                   <div class="crazy-borderv2"></div>
                  </h4>
-              Sed ut perspiciatis unde omnis iste natus error sit
-              voluptatem accusantium doloremque laudantium, totam
-              rem aperiam, eaque ipsa quae ab illo inventore veritatis
-              et quasi archite 
+              Speed is our main tenant. We apply Agile methodologies to a novel environment to achieve project deliverables while creating the infrastructure on which they sit.
             </div>
               <!-- </div > -->
-              <div class="col-md-4">
+              <div class="">
                 <h4 class="sub_title"> Product Lunch
                   <div class="crazy-borderv2"></div>
                 </h4>
-                Sed ut perspiciatis unde omnis iste natus error sit
-                voluptatem accusantium doloremque laudantium, totam
-                rem aperiam, eaque ipsa quae ab illo inventore veritatis
-                et quasi archite
+                We are the intersection of a think tank and a products company. We ideate, we innovate and then we create.
                  
               </div>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="col-md-12 second-sec-title">
-            <img src="assets/images/bushidiagram.png" >
+          <!-- <div class="col-md-12 second-sec-title"> -->
+            <!-- <img src="assets/images/diagram_bushi.png" > -->
           </div>
         </div>
     </div>
@@ -142,19 +134,12 @@
               <img src="assets/images/portfolio-style-one/single5.jpg" alt="image">
             </div>
             <div class="col-md-6 col-md-offset-1">
-              <h4 class="sub_title">01. Graphic Design
+              <h4 class="sub_title">01. Digital Currency
                  <div class="crazy-borderv2"></div>
               </h4>
 
-              <p>Vestibulum eu ante eget metus consequat tincidunt id a metus. Curabitur
-                bibendum quam porta, pharetra diam quis, porta lacus. Sed augue ex, tempor vitae
-                rutrum vel, congue consequat tortor. Cras quis diam fermentum, ultrices leo at,
-                ornare enim.
+              <p>We use and build open source protocols that leverage the power of blockchain and smart contracts to create cheap, fast and private transactions. These include consensus mechanisms, wallet development and ancillary functionality.
               </p>
-
-              <p>Duis tincidunt, eros at feugiat efficitur, metus nulla sagittis neque, eget
-                feugiat orci tellus vitae enim. Pellentesque volutpat dolor purus, ut tincidunt
-                eros vestibulum vitae.</p>
 
               <div class="mt40">
                 <a href="/our_work" class="btn animsition-link line-hor">
@@ -171,19 +156,14 @@
               <img src="assets/images/portfolio-style-one/single6.jpg" alt="image">
             </div>
             <div class="col-md-6 col-md-offset-1">
-              <h4 class="sub_title">02. Web Design
+              <h4 class="sub_title">02. Blockchain Applications
                  <div class="crazy-borderv2"></div>
               </h4>
 
-              <p>Vestibulum eu ante eget metus consequat tincidunt id a metus. Curabitur
-                bibendum quam porta, pharetra diam quis, porta lacus. Sed augue ex, tempor vitae
-                rutrum vel, congue consequat tortor. Cras quis diam fermentum, ultrices leo at,
-                ornare enim.
+              <p>User adoption and application innovations is driving the need for more secure and robust infrastructures.
               </p>
 
-              <p>Duis tincidunt, eros at feugiat efficitur, metus nulla sagittis neque, eget
-                feugiat orci tellus vitae enim. Pellentesque volutpat dolor purus, ut tincidunt
-                eros vestibulum vitae.</p>
+              <p>We are ‘blockchain agnostic’ in that we leverage several different platforms for different use-cases. The bulk of our experience lies in the Bitcoin and Ethereum Networks.</p>
 
               <div class="mt40">
                 <a href="/our_work" class="btn animsition-link line-hor">
@@ -200,19 +180,16 @@
               <img src="assets/images/portfolio-style-one/single7.jpg" alt="image">
             </div>
             <div class="col-md-6 col-md-offset-1">
-              <h4 class="sub_title">03. Branding
+              <h4 class="sub_title">03. Financial Networks
                  <div class="crazy-borderv2"></div>
               </h4>
 
-              <p>Vestibulum eu ante eget metus consequat tincidunt id a metus. Curabitur
-                bibendum quam porta, pharetra diam quis, porta lacus. Sed augue ex, tempor vitae
-                rutrum vel, congue consequat tortor. Cras quis diam fermentum, ultrices leo at,
-                ornare enim.
+              <p>We are researching Layer 2 and Sidechain applications to support Layer 1 scalability. These protocols will afford users and institutions the ability to leverage the power of digital assets across blockchains to provide liquidity through the bridging of disparate markets.
               </p>
 
-              <p>Duis tincidunt, eros at feugiat efficitur, metus nulla sagittis neque, eget
+<!--               <p>Duis tincidunt, eros at feugiat efficitur, metus nulla sagittis neque, eget
                 feugiat orci tellus vitae enim. Pellentesque volutpat dolor purus, ut tincidunt
-                eros vestibulum vitae.</p>
+                eros vestibulum vitae.</p> -->
 
               <div class="mt40">
                 <a href="/our_work" class="btn animsition-link line-hor">
