section after landing mostly completed

--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -53,34 +53,30 @@
       <div class="title">
         The Intellectual and Technological Powerhouse Creating Tomorrow.
       </div>
-        <div class="row">
-          <div class="col-md-6 agile-diagram-text pt50 pb50" style="font-size: larger;">
+        <div class="row pt70 pb50">
+          <div class="col-md-6 agile-diagram-text pt50" style="font-size: larger;">
             <img src="assets/images/diagram_bushi.png" >
           </div>
-          <div class="col-md-6" >
-            <div  class="">
+          <div class="col-md-6 bushi-workflow" >
+            <div class="agile-diagram-sub-tex">
                 <h4 class="sub_title"> Research & Planning
                   <div class="crazy-borderv2"></div>
                 </h4>
-                We apply the rigor of the scientific method to the nascent space of cryptocurrency and blockchain, developing the infrastructure of the Web 3.0
+                We apply the rigor of the scientific method to the nascent space of cryptocurrency and blockchain, developing the infrastructure of the Web 3.0.
 
               </div>
-              <div class="">
+              <div class="agile-diagram-sub-tex">
                 <h4 class="sub_title"> Agile Development
                   <div class="crazy-borderv2"></div>
                  </h4>
               Speed is our main tenant. We apply Agile methodologies to a novel environment to achieve project deliverables while creating the infrastructure on which they sit.
             </div>
-              <!-- </div > -->
-              <div class="">
-                <h4 class="sub_title"> Product Lunch
+              <div class="agile-diagram-sub-tex">
+                <h4 class="sub_title"> Product Launch
                   <div class="crazy-borderv2"></div>
                 </h4>
                 We are the intersection of a think tank and a products company. We ideate, we innovate and then we create.
-                 
               </div>
-          <!-- <div class="col-md-12 second-sec-title"> -->
-            <!-- <img src="assets/images/diagram_bushi.png" > -->
           </div>
         </div>
     </div>
