individual pictures added and accents

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -6,7 +6,7 @@
   <% unless @site.slug == 'contact_us' %>
     <div class="container">
 
-      <h2 data-sr>contact us</h2>
+      <div class="title">contact us</div>
 
       <div class="col-sm-8 col-sm-offset-2 pt80 pb80" data-sr="wait .2s">
         <div class="row">
