--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -127,7 +127,8 @@
 
           <div class="owl-item">
             <div class="col-md-5">
-              <img src="assets/images/portfolio-style-one/single5.jpg" alt="image">
+              <img src="assets/images/digital_currency.jpg" alt="image">
+              <div class="overlay"></div>
             </div>
             <div class="col-md-6 col-md-offset-1">
               <h4 class="sub_title">01. Digital Currency
@@ -149,7 +150,8 @@
 
           <div class="owl-item">
             <div class="col-md-5">
-              <img src="assets/images/portfolio-style-one/single6.jpg" alt="image">
+              <img src="assets/images/blockchain_applications.jpg" alt="image">
+              <div class="overlay"></div>
             </div>
             <div class="col-md-6 col-md-offset-1">
               <h4 class="sub_title">02. Blockchain Applications
@@ -173,7 +175,8 @@
 
           <div class="owl-item">
             <div class="col-md-5">
-              <img src="assets/images/portfolio-style-one/single7.jpg" alt="image">
+              <img src="assets/images/financial_networks.jpg" alt="image">
+              <div class="overlay"></div>
             </div>
             <div class="col-md-6 col-md-offset-1">
               <h4 class="sub_title">03. Financial Networks
@@ -182,10 +185,6 @@
 
               <p>We are researching Layer 2 and Sidechain applications to support Layer 1 scalability. These protocols will afford users and institutions the ability to leverage the power of digital assets across blockchains to provide liquidity through the bridging of disparate markets.
               </p>
-
-<!--               <p>Duis tincidunt, eros at feugiat efficitur, metus nulla sagittis neque, eget
-                feugiat orci tellus vitae enim. Pellentesque volutpat dolor purus, ut tincidunt
-                eros vestibulum vitae.</p> -->
 
               <div class="mt40">
                 <a href="/our_work" class="btn animsition-link line-hor">
@@ -299,12 +298,12 @@
     <!-- End container -->
 
     <div class="container">
-      <div class="row">
+      <div class="row pb50">
         <div class="col-sm-4">
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <img src="assets/images/team_001.png" alt="image">
+              <img src="assets/images/chris.jpg" alt="image">
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -340,7 +339,79 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <img src="assets/images/team_002.png" alt="image">
+              <img src="assets/images/sam.jpg" alt="image">
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
+            </div>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Ruby Rails / web designer</h6>
+              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+            </div>
+            <!-- End team-footer -->
+          </div>
+          <!-- End team-item -->
+        </div>
+        <div class="col-sm-4">
+
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <img src="assets/images/kevin.jpg" alt="image">
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
+            </div>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Ruby Rails / web designer</h6>
+              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+            </div>
+            <!-- End team-footer -->
+          </div>
+          <!-- End team-item -->
+        </div>
+      </div>
+      <div class="row pb50">
+        <div class="col-sm-4">
+
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <img src="assets/images/nicolas.jpg" alt="image">
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -375,77 +446,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <img src="assets/images/team_002.png" alt="image">
-              <div class="social-wrap">
-                <ul class="list-none">
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-facebook"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-dribbble"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-twitter"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <!-- End social-wrap -->
-            </div>
-            <!-- End team-header -->
-            <div class="team-footer">
-              <h6>Ruby Rails / web designer</h6>
-              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
-            </div>
-            <!-- End team-footer -->
-          </div>
-          <!-- End team-item -->
-        </div>
-                <div class="col-sm-4">
-
-          <div class="team-item sm-mb40">
-            <div class="team-header">
-              <img src="assets/images/team_002.png" alt="image">
-              <div class="social-wrap">
-                <ul class="list-none">
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-facebook"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-dribbble"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-twitter"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <!-- End social-wrap -->
-            </div>
-            <!-- End team-header -->
-            <div class="team-footer">
-              <h6>Ruby Rails / web designer</h6>
-              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
-            </div>
-            <!-- End team-footer -->
-          </div>
-          <!-- End team-item -->
-        </div>
-                <div class="col-sm-4">
-
-          <div class="team-item sm-mb40">
-            <div class="team-header">
-              <img src="assets/images/team_002.png" alt="image">
+              <img src="assets/images/luis.jpg" alt="image">
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -481,7 +482,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <img src="assets/images/team_003.png" alt="image">
+              <img src="assets/images/andres.jpg" alt="image">
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
