--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -6,7 +6,9 @@
   <div class="container">
 
     <div class="crazy-logo">
-      <img src="assets/images/bushilogo.png" alt="crazy-logo">
+      <a href="/">
+        <img src="assets/images/bushilogo.png" alt="crazy-logo">
+      </a>
     </div>
     <!-- End crazy-logo -->
 
