page looking pretty nice

--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -9,11 +9,12 @@
       <h4 data-sr style="" class='we-are'>We are
         <span class="color typed-two">&nbsp;</span>
       </h4>
-      <em data-sr>Donec et purus iaculis, posuere ipsum sed, lobortis quam. Suspendisse potenti.
+      <p class='text white'>We are entering a world that is fundamentally different than the one we know.
         <br>
-        Vestibulum accumsan sem sit amet leo finibus rutrum. Nulla sit amet
+        Economics and governance is changing. Institutions are shifting. People are listening.
         <br>
-        posuere arcu, sit amet porttitor nibh.</em>
+        The next phase is here.
+      </p>
       <div class="buttons mt40 mb100">
         <a href="/our_work" class="btn btn-white animsition-link" data-sr>
           <span>view our works</span>
@@ -21,19 +22,19 @@
 
       </div>
     </div>
-    <div class="row">
+    <div class="row" style="opacity: .6">
       <div><p class="title-over-images"> Trusted by leading brands </p> </div>
-      <div class="col-md-3">
-        <img alt="Airbnb" src="https://bs-uploads.toptal.io/blackfish-uploads/projects_page/content/client/logo_file/logo/1860/client_1_logo-b668aedc00b0a5303fd5e7511e087367.png">
+      <div class="col-md-3 techno">
+        <%= image_tag 'bitcoin.png' %>
       </div>
-      <div class="col-md-3">
-        <img alt="HP" src="https://bs-uploads.toptal.io/blackfish-uploads/projects_page/content/client/logo_file/logo/1861/hpe-2-32e980cb9e3fdf1e5e72bc3794d91dc5.svg">
+      <div class="col-md-3 techno">
+        <%= image_tag 'ether.png' %>
       </div>
-      <div class="col-md-3">
-        <img alt="Shopify" src="https://bs-uploads.toptal.io/blackfish-uploads/projects_page/content/client/logo_file/logo/1862/client_4_logo-991b5313f351d0c08ce21b490869c2ac.png">
+      <div class="col-md-3 techno">
+        <%= image_tag 'rsk.png' %>
       </div>
-      <div class="col-md-3">
-        <img alt="Zendesk" src="https://bs-uploads.toptal.io/blackfish-uploads/projects_page/content/client/logo_file/logo/1863/client_5_logo-c8def699bdc2bb0e707496044f58a9a3.png">
+      <div class="col-md-3 techno">
+        <%= image_tag 'lightning.png' %>
       </div>
     </div>
   </div>
@@ -55,27 +56,28 @@
       </div>
         <div class="row pt70 pb50">
           <div class="col-md-6 agile-diagram-text pt50" style="font-size: larger;">
-            <img src="assets/images/diagram_bushi.png" >
+            <%= image_tag 'diagram_bushi.png' %>
+            <!-- <img src="assets/images/diagram_bushi.png" > -->
           </div>
           <div class="col-md-6 bushi-workflow" >
             <div class="agile-diagram-sub-tex">
                 <h4 class="sub_title"> Research & Planning
                   <div class="crazy-borderv2"></div>
                 </h4>
-                We apply the rigor of the scientific method to the nascent space of cryptocurrency and blockchain, developing the infrastructure of the Web 3.0.
+                <p class='text black'>We apply the rigor of the scientific method to the nascent space of cryptocurrency and blockchain, developing the infrastructure of the Web 3.0.</p>
 
               </div>
               <div class="agile-diagram-sub-tex">
                 <h4 class="sub_title"> Agile Development
                   <div class="crazy-borderv2"></div>
                  </h4>
-              Speed is our main tenant. We apply Agile methodologies to a novel environment to achieve project deliverables while creating the infrastructure on which they sit.
+              <p class='text black'>Speed is our main tenant. We apply Agile methodologies to a novel environment to achieve project deliverables while creating the infrastructure on which they sit.</p>
             </div>
               <div class="agile-diagram-sub-tex">
                 <h4 class="sub_title"> Product Launch
                   <div class="crazy-borderv2"></div>
                 </h4>
-                We are the intersection of a think tank and a products company. We ideate, we innovate and then we create.
+                <p class='text black'>We are the intersection of a think tank and a products company. We ideate, we innovate and then we create.</p>
               </div>
           </div>
         </div>
