--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -4,7 +4,7 @@
 
 <footer class="<%= @site.slug != 'contact_us' && 'pt150'%>">
   <% unless @site.slug == 'contact_us' %>
-    <div class="container">
+    <div class="container" id="contact_us" >
 
       <div class="title">contact us</div>
 
